--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </span>
         </li>
       </ul>
-      <button class="card__button">Continue</button>
+      <button class="card__button" type="button">Continue</button>
     </div>
   </main>
 </body>
